--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -157,8 +157,138 @@
 }
 
 /* ASSIGNMENTS */
+#enter-assignment-name {
+    font-size: 45px;
+    font-family: hero-new, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+#create-rubric-here {
+    font-size: 45px;
+    font-family: hero-new, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    text-align: center;
+    margin-top: 100px;
+    margin-left: 50px;
+}
+
+#enter-assignment-name-input {
+    font-size: 45px;
+    font-family: hero-new, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#create-assignment-button {
+    text-decoration: none;
+    height: 75px;
+    width: 125px;
+    background-color:rgba(151, 206, 176, 0.3);
+    text-align: center;
+    font-size: 45px;
+    color: black;
+    margin-top: 60px;
+    margin-left: 280px;
+}
+
+#rubric-text-area {
+    font-family: hero-new, sans-serif;
+    font-weight: 400;
+    font-style: normal;  
+}
 
 /* GRADES */
+#student-answers-header {
+    font-size: 35px;
+    font-family: hero-new, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-left: 30px;
+}
+
+#content-box {
+    margin-left: 30px;
+    font-size: 18px;
+    font-family: hero-new, sans-serif;
+    font-weight: 400;
+    font-style: normal; 
+    padding: 10px;
+}
+
+#grade-box {
+    height: 150px;
+    width: 300px;
+    background-color:rgba(151, 206, 176, 0.3);
+    margin-left: 200px;
+    margin-bottom: 15px;
+    padding-top: 0px;
+}
+
+#grade-value {
+    font-size: 95px;
+    font-family: hero-new, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-left: 125px;
+}
+
+#enter-student-name {
+    font-size: 45px;
+    font-family: hero-new, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-left: 200px;
+    margin-top: 50px;
+}
+
+#pick-assignment {
+    font-size: 45px;
+    font-family: hero-new, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-left: 200px;
+    margin-top: 50px;
+}
+
+#grade-box-header {
+    font-size: 45px;
+    font-family: hero-new, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    margin-left: 200px;
+    margin-top: 50px;
+}
+
+#enter-student-name-input {
+    font-size: 25px;
+    font-family: hero-new, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#pick-assignment-input {
+    font-size: 25px;
+    font-family: hero-new, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#continue-grade-button {
+    margin-top: 25px;
+    text-decoration: none;
+    height: 75px;
+    width: 125px;
+    background-color:rgba(151, 206, 176, 0.3);
+    text-align: center;
+    font-size: 25px;
+    color: black;
+    margin-left: 200px;
+}
 
 /* STUDENTS */
 
